# rusting

./: Cargo.toml
src/: error_basic.rs  foo.rs  func.rs  funcs.rs  main.rs
src/models/: user_model.rs
src/routes/: health_route.rs  user_route.rs
