[package]
name = "rusting"
version = "0.1.0"
edition = "2024"

[dependencies]

# Cargo auto-discovers every src/bin/*.rs and src/bin/*/main.rs as a binary.
# Run a specific one with:   cargo run --bin <name>
# Build all with:            cargo build
#
# Available binaries:
#   formatting       — println!, format!, Debug printing
#   types            — primitives, type bounds, casting, overflow
#   tuples           — tuple syntax, destructuring, nested tuples
#   arrays           — arrays, slices, indexing
#   strings          — String vs &str, slices, deref coercion
#   enums            — enum variants, Option, Result
#   structs          — named/tuple/unit structs, methods, associated fns
#   control_flow     — if/else, match, if-let, let-else
#   loops            — loop, while, for, labels, returning from loop
#   functions        — never type (!), diverging functions
#   modules_inline   — module visibility, pub, super::, nested modules
#   modules_files    — file-based module organisation (mod.rs pattern)
#   ownership        — ownership rules, move semantics, Copy types
#   borrow_rules     — &/&mut, 4 binding×ref combos, the 3 borrow rules
#   error_handling   — panic, Option, Result, unwrap, ?, Box<dyn Error>
